[project]
name = "pyspark-polygon"
version = "0.1.0"
description = "Isolated PySpark polygon in Docker"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pyspark==4.1.2",
    "pyarrow>=15",
    "pandas>=2.2,<3",
    "jupyterlab>=4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyspark_polygon"]
